force-app/main/default/objects/sfpegCard__mdt/sfpegCard__mdt.object-meta.xml
<CustomObject>
    <description>Description of field sets available for the sfpegCardCmp component</description>
    <label>sfpegCard</label>
    <pluralLabel>sfpegCards</pluralLabel>
</CustomObject>