force-app/main/default/objects/sfpegCard__mdt/fields/DisplayConfig__c.field-meta.xml
<CustomField>
    <fullName>DisplayConfig__c</fullName>
    <description>Display configuration of the field set (possibly grouped into sections)</description>
    <label>Display Configuration</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>