force-app/main/default/objects/sfpegCard__mdt/fields/TargetIdField__c.field-meta.xml
<CustomField>
    <fullName>TargetIdField__c</fullName>
    <description>Field API Name of the current record containing the ID of the target record (current record&apos;s ID by default)</description>
    <label>Target ID Field</label>
    <length>125</length>
    <type>Text</type>
</CustomField>