force-app/main/default/objects/sfpegCard__mdt/fields/TargetObject__c.field-meta.xml
<CustomField>
    <fullName>TargetObject__c</fullName>
    <description>Object API Name of the record (current record&apos;s object name by default)</description>
    <label>Target Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>